ObjectMapper -> JsonMapper
Use configuration that was included as a default in Jackson 2, so as to
prevent unexpected failures